--- a/fieldcapture-hub/grails-app/i18n/messages.properties
+++ b/fieldcapture-hub/grails-app/i18n/messages.properties
@@ -60,24 +60,20 @@ label.au.org.ala.ecodata.Site=<span class=\"label label-warning\">Site</span>
 label.au.org.ala.ecodata.Output=<span class=\"label label-primary\">Output</span>
 label.au.org.ala.ecodata.Setting=<span class=\"label label-inverse\">Static&nbsp;Page</span>
 label.className=Type
-label.fundingSourceFacet=Funding source
 label.reportingThemesFacet=Reporting theme
 label.organisationFacet=Organisation
 label.typeFacet=Activity type
 label.associatedProgramFacet=Program
 label.associatedSubProgramFacet=Sub Program
-label.assessment=Assessment
 label.stateFacet=State
-label.statesFacet=State
 label.lgaFacet=<abbr title="Local Government Areas">LGA</abbr>
-label.lgasFacet=<abbr title="Local Government Areas">LGA</abbr>
 label.nrmFacet=<abbr title="Natural Resource Management Areas">Management Areas</abbr>
-label.nrmsFacet=<abbr title="Natural Resource Management Areas">Management Areas</abbr>
-label.mvgsFacet=<abbr title="National Vegetation Information System Major Vegetation Group">Major Vegetation Group</abbr>
+label.mvgFacet=<abbr title="National Vegetation Information System Major Vegetation Group">Major Vegetation Group</abbr>
 label.mainThemeFacet=<abbr title="Reporting Theme">Reporting Theme</abbr>
 label.ibraFacet=<abbr title="Biogeographic Region">Biogeographic Regions</abbr>
 label.imcra4_pbFacet=<abbr title="Marine Region">Marine Regions</abbr>
 label.otherFacet=<abbr title="Other areas">Other Regions</abbr>
+label.gerSubRegionFacet=<abbr title="Great Eastern Ranges Sub-Region">GER Sub-Region</abbr>
 
 
 label.T=<i class=\"icon-ok\"></i>
