--- a/fieldcapture-hub/grails-app/i18n/messages.properties
+++ b/fieldcapture-hub/grails-app/i18n/messages.properties
@@ -60,7 +60,7 @@ label.au.org.ala.ecodata.Site=<span class=\"label label-warning\">Site</span>
 label.au.org.ala.ecodata.Output=<span class=\"label label-primary\">Output</span>
 label.au.org.ala.ecodata.Setting=<span class=\"label label-inverse\">Static&nbsp;Page</span>
 label.className=Type
-label.reportingThemesFacet=Reporting theme
+label.reportingThemesFacet=Project Type
 label.organisationFacet=Organisation
 label.typeFacet=Activity type
 label.associatedProgramFacet=Program
