Updated GER facets.

--- a/fieldcapture-hub/grails-app/i18n/messages.properties
+++ b/fieldcapture-hub/grails-app/i18n/messages.properties
@@ -63,17 +63,17 @@ label.className=Type
 label.reportingThemesFacet=Project Type
 label.organisationFacet=Organisation
 label.typeFacet=Activity type
-label.associatedProgramFacet=Program
+label.associatedProgramFacet=Funding Sources
 label.associatedSubProgramFacet=Sub Program
 label.stateFacet=State
 label.lgaFacet=<abbr title="Local Government Areas">LGA</abbr>
 label.nrmFacet=<abbr title="Natural Resource Management Areas">Management Areas</abbr>
 label.mvgFacet=<abbr title="National Vegetation Information System Major Vegetation Group">Major Vegetation Group</abbr>
-label.mainThemeFacet=<abbr title="Reporting Theme">Reporting Theme</abbr>
+label.mainThemeFacet=<abbr title="Project Types">Project Types</abbr>
 label.ibraFacet=<abbr title="Biogeographic Region">Biogeographic Regions</abbr>
 label.imcra4_pbFacet=<abbr title="Marine Region">Marine Regions</abbr>
 label.otherFacet=<abbr title="Other areas">Other Regions</abbr>
-label.gerSubRegionFacet=<abbr title="Great Eastern Ranges Sub-Region">GER Sub-Region</abbr>
+label.gerSubRegionFacet=<abbr title="Partnership Regions">Partnership Regions</abbr>
 
 
 label.T=<i class=\"icon-ok\"></i>
