Fix for reliance on Facet suffix for matching selected facets.  Tided the geographic facet selection.

--- a/fieldcapture-hub/grails-app/i18n/messages.properties
+++ b/fieldcapture-hub/grails-app/i18n/messages.properties
@@ -74,7 +74,7 @@ label.ibraFacet=<abbr title="Biogeographic Region">Biogeographic Regions</abbr>
 label.imcra4_pbFacet=<abbr title="Marine Region">Marine Regions</abbr>
 label.otherFacet=<abbr title="Other areas">Other Regions</abbr>
 label.gerSubRegionFacet=<abbr title="Partnership Regions">Partnership Regions</abbr>
-
+label.GER\ Border\ Ranges=Border Ranges Alliance
 
 label.T=<i class=\"icon-ok\"></i>
 label.F=<i class=\"icon-remove\"></i>
@@ -85,3 +85,4 @@ label.docType=Type
 label.project=Project
 label.site=Site
 label.activity=Activity
+
