added image,projectPrivace,dataSharin[License] to project

--- a/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
+++ b/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
@@ -10,6 +10,7 @@ g.fieldCapture=Field Capture
 g.home=Home
 g.iTunes=iTunes app
 g.keywords=Keywords
+g.loading=Loading...
 g.less=(less)
 g.more=(more)
 g.next=Next
@@ -67,14 +68,20 @@ project.create.type.survey=Choose this option for survey-based projects where ac
   <p>Examples include: Single or multi-species water watch surveys, ecological surveys, etc.</p>
 project.create.type.works=Choose this option for projects which have a schedule of actions (activities). Each record in the database requires a new activity to be added to the schedule before data can be recorded against it.\
   <p>Examples include: Projects to enhance, restore, protect or manage environmental assets, etc.</p>
+project.details.access=Define access rules for your project data
 project.details.aim=What is the aim of this project?
+project.details.dataSharing=Data sharing
+project.details.dataSharingLicense=Data sharing license
 project.details.find=Help people find your project
+project.details.image=Manage your project logo
 project.details.involved=How can people get involved?
 project.details.manager=Contact email address
 project.details.org=Organisation which owns this project
 project.details.orgGrantee=Organisation which is the grantee
 project.details.orgSponsor=Sponsoring organisation
 project.details.orgSvcProvider=Service provider organisation
+project.details.projectPrivacy=Project privacy
 project.details.scienceType=Type of science being undertaken
+project.details.site=Define the site for your project
 project.details.tell=Tell people about your project
 
