prep changes for organisation work

--- a/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
+++ b/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
@@ -28,7 +28,7 @@ g.project.actualEndDate=Actual End Date
 g.project.actualEndDate.help=Date the project actually finished.
 g.project.actualStartDate=Actual Start Date
 g.project.actualStartDate.help=Date the project actually commenced.
-g.project.description=Project Description
+g.project.description=Project Aim and Description
 g.project.details=Project Details
 g.project.externalId=External Id
 g.project.funding=Project funding
