Templates for different project configuations.

--- a/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
+++ b/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
@@ -72,7 +72,7 @@ project.details.aim=What is the aim of this project?
 project.details.dataSharing=Data sharing
 project.details.dataSharingLicense=Data sharing license
 project.details.find=Help people find your project
-project.details.image=Manage your project logo
+project.details.image=Project graphics
 project.details.involved=How can people get involved?
 project.details.manager=Contact email address
 project.details.org=Organisation which owns this project
