checkpoint for org linkage to collectory

--- a/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
+++ b/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
@@ -55,7 +55,7 @@ g.website=Web site
 project.citizenScience.heading=Citizen Science Biodiversity Hub
 project.citizenScience.portalLink=Build a CS data collection portal
 project.citizenScience.preamble=This is a place where you can find out what is happening in citizen science in your area or by topic of interest.
-project.citizenScience.registerLink=Register a project
+project.citizenScience.registerLink=Register a project for an organisation
 project.create.crumb=Create new project
 project.create.isCitizenScience=This is a citizen science project.
 project.create.settings.heading=This section allows you to restrict the types of activities that can be created as a part of this project.
