use session attr citizenScienceOrg to mark user's intention to create cs project

--- a/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
+++ b/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
@@ -53,9 +53,8 @@ g.status=Status
 g.subprogram.name=Sub-program name
 g.website=Web site
 project.citizenScience.heading=Citizen Science Biodiversity Hub
-project.citizenScience.portalLink=Build a CS data collection portal
+project.citizenScience.portalLink=Build or register a CS data collection portal
 project.citizenScience.preamble=This is a place where you can find out what is happening in citizen science in your area or by topic of interest.
-project.citizenScience.registerLink=Register an external project
 project.create.crumb=Create new project
 project.create.isCitizenScience=This is a citizen science project.
 project.create.settings.heading=This section allows you to restrict the types of activities that can be created as a part of this project.
