--- a/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
+++ b/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
@@ -52,7 +52,7 @@ g.sortOrder=Sort order
 g.status=Status
 g.subprogram.name=Sub-program name
 g.website=Web site
-project.citizenScience.heading=Citizen Science Biodiversity Hub
+project.citizenScience.heading=Citizen Science Project Finder
 project.citizenScience.portalLink=Build or register a CS data collection portal
 project.citizenScience.preamble=This is a place where you can find out what is happening in citizen science in your area or by topic of interest.
 project.create.crumb=Create new project
