Added Proj3ct difficulty, diy, hasParticipantCost, isSuitableForChildren, gear and task

--- a/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
+++ b/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
@@ -83,6 +83,25 @@ project.details.scienceType=Type of science being undertaken
 project.details.site=Define the site for your project
 project.details.tell=Tell people about your project
 
+project.search.active=Show active projects only
+project.search.difficulty=Show project with difficulty level
+project.search.diy=Show do-it-yourself projects only
+project.search.noCost=Show project without fee/cost
+
+project.difficulty=What is the difficulty level of field work?
+project.difficulty.help=
+project.gear=What kind of equipment is needed for field work?
+project.gear.help=
+project.hasParticipantCost=Is there any cost to participants?
+project.hasParticipantCost.help=
+project.hasTeachingMaterials=Do you provide any teaching materials to participants?
+project.hasTeachingMaterials.help=
+project.isDIY=Is this a do-it-yourself project?
+project.isDIY.help=
+project.isSuitableForChildren=Is this project suitable for children under 18?
+project.isSuitableForChildren.help=
+project.task=Please describe the tasks involved in field work
+project.task.help=
 project.type=What kind of project is this?
 project.type.help=
 project.useALA=Do you want to record your project data on this site?
