cosmetic changes in cs project finder page

--- a/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
+++ b/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
@@ -53,7 +53,7 @@ g.status=Status
 g.subprogram.name=Sub-program name
 g.website=Web site
 project.citizenScience.heading=Citizen Science Project Finder
-project.citizenScience.portalLink=Build or register a CS data collection portal
+project.citizenScience.portalLink=Build or register a CS project
 project.citizenScience.preamble=This is a place where you can find out what is happening in citizen science in your area or by topic of interest.
 project.create.crumb=Create new project
 project.create.isCitizenScience=This is a citizen science project.
@@ -83,10 +83,11 @@ project.details.scienceType=Type of science being undertaken
 project.details.site=Define the site for your project
 project.details.tell=Tell people about your project
 
-project.search.active=Show active projects only
-project.search.difficulty=Show project with difficulty level
-project.search.diy=Show do-it-yourself projects only
-project.search.noCost=Show project without fee/cost
+project.search.active=Show only active projects
+project.search.children=Show only projects suitable for children
+project.search.difficulty=Show only projects with difficulty level
+project.search.diy=Show only do-it-yourself projects
+project.search.noCost=Show only free projects
 
 project.difficulty=What is the difficulty level of field work?
 project.difficulty.help=
