--- a/fieldcapture-hub/grails-app/i18n/messages.properties
+++ b/fieldcapture-hub/grails-app/i18n/messages.properties
@@ -75,6 +75,11 @@ label.imcra4_pbFacet=<abbr title="Marine Region">Marine Regions</abbr>
 label.otherFacet=<abbr title="Other areas">Other Regions</abbr>
 label.gerSubRegionFacet=<abbr title="Partnership Regions">Partnership Regions</abbr>
 label.GER\ Border\ Ranges=Border Ranges Alliance
+label.electFacet = <abbr title="Project status">Federal Electorates</abbr>
+label.cmzFacet = <abbr title="Conservation Management Zones">CMZ</abbr>
+label.meriPlanAssetFacet=<abbr title="Assets addressed in the MERI plan">Assets Addressed</abbr>
+label.partnerOrganisationTypeFacet=<abbr title="Organisation type of partner organisations">Partner Organisations</abbr>
+
 
 label.T=<i class=\"icon-ok\"></i>
 label.F=<i class=\"icon-remove\"></i>
