--- a/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
+++ b/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
@@ -1,4 +1,3 @@
-g.android=Android app
 g.appsLinks=Mobile apps
 g.cancel=Cancel
 g.citizenScience=Citizen Science
@@ -7,8 +6,8 @@ g.coverage=Coverage
 g.download=Download
 g.edit=Edit
 g.fieldCapture=Field Capture
+g.filter=Filter
 g.home=Home
-g.iTunes=iTunes app
 g.keywords=Keywords
 g.loading=Loading...
 g.less=(less)
@@ -52,9 +51,10 @@ g.sortOrder=Sort order
 g.status=Status
 g.subprogram.name=Sub-program name
 g.website=Web site
-project.citizenScience.heading=Citizen Science Project Finder
-project.citizenScience.portalLink=Build or register a CS project
+project.citizenScience.heading=Welcome to the Citizen Science Project Finder page.
 project.citizenScience.preamble=This is a place where you can find out what is happening in citizen science in your area or by topic of interest.
+project.citizenScience.preamble1=Browse the projects below or use the search to refine what is displayed below.
+project.citizenScience.search=Use the search filter to refine the display results below.
 project.create.crumb=Create new project
 project.create.isCitizenScience=This is a citizen science project.
 project.create.settings.heading=This section allows you to restrict the types of activities that can be created as a part of this project.
@@ -89,6 +89,14 @@ project.search.difficulty=Show only projects with difficulty level
 project.search.diy=Show only do-it-yourself projects
 project.search.noCost=Show only free projects
 
+project.tag.difficultyEasy=Difficulty: Easy
+project.tag.difficultyMedium=Difficulty: Medium
+project.tag.difficultyHard=Difficulty: Hard
+project.tag.diy=DIY
+project.tag.children=Child/Family Friendly
+project.tag.noCost=No Cost
+project.tag.teach=Teaching Materials
+
 project.difficulty=What is the difficulty level of field work?
 project.difficulty.help=
 project.gear=What kind of equipment is needed for field work?
@@ -109,3 +117,4 @@ project.useALA=Do you want to record your project data on this site?
 project.useALA.help=
 project.organisationNameSearch=What is the name of the organisation running this project?
 project.organisationNameSearch.help=
+
