more changes to cs pages

--- a/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
+++ b/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
@@ -51,7 +51,7 @@ g.sortOrder=Sort order
 g.status=Status
 g.subprogram.name=Sub-program name
 g.website=Web site
-project.citizenScience.heading=Welcome to the Citizen Science Project Finder page.
+project.citizenScience.heading=Citizen Science Project Finder
 project.citizenScience.preamble=This is a place where you can find out what is happening in citizen science in your area or by topic of interest.
 project.citizenScience.preamble1=Browse the projects below or use the search to refine what is displayed below.
 project.citizenScience.search=Use the search filter to refine the display results below.
@@ -88,6 +88,7 @@ project.search.children=Show only projects suitable for children
 project.search.difficulty=Show only projects with difficulty level
 project.search.diy=Show only do-it-yourself projects
 project.search.noCost=Show only free projects
+project.search.teach=Show only projects with teaching materials
 
 project.tag.difficultyEasy=Difficulty: Easy
 project.tag.difficultyMedium=Difficulty: Medium
