--- a/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
+++ b/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
@@ -52,6 +52,7 @@ g.status=Status
 g.subprogram.name=Sub-program name
 g.website=Web site
 project.citizenScience.heading=Citizen Science Project Finder
+project.citizenScience.portalLink=Create new project
 project.citizenScience.preamble=This is a place where you can find out what is happening in citizen science in your area or by topic of interest.
 project.citizenScience.preamble1=Browse the projects below or use the search to refine what is displayed below.
 project.citizenScience.search=Use the search filter to refine the display results below.
