prep for edit changes

--- a/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
+++ b/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
@@ -23,20 +23,13 @@ g.program.name=Program name
 g.project=Project
 g.projects=Projects
 g.project.activities=Project Activities
-g.project.actualEndDate=Actual End Date
-g.project.actualEndDate.help=Date the project actually finished.
-g.project.actualStartDate=Actual Start Date
-g.project.actualStartDate.help=Date the project actually commenced.
-g.project.description=Project Aim and Description
+g.project.aim=Project Aim
+g.project.description=Project Description
 g.project.details=Project Details
 g.project.externalId=External Id
 g.project.funding=Project funding
 g.project.grantId=Grant Id
 g.project.name=Project Name
-g.project.plannedEndDate=Planned End Date
-g.project.plannedEndDate.help=Date the project is intended to finish.
-g.project.plannedStartDate=Planned Start Date
-g.project.plannedStartDate.help=Date the project is intended to commence.
 g.project.type=Project Type
 g.project.type.survey=Biological survey project
 g.project.type.works=Works and site based project
@@ -53,9 +46,6 @@ g.subprogram.name=Sub-program name
 g.website=Web site
 project.citizenScience.heading=Citizen Science Project Finder
 project.citizenScience.portalLink=Create new project
-project.citizenScience.preamble=This is a place where you can find out what is happening in citizen science in your area or by topic of interest.
-project.citizenScience.preamble1=Browse the projects below or use the search to refine what is displayed below.
-project.citizenScience.search=Use the search filter to refine the display results below.
 project.create.crumb=Create new project
 project.create.isCitizenScience=This is a citizen science project.
 project.create.settings.heading=This section allows you to restrict the types of activities that can be created as a part of this project.
@@ -69,10 +59,11 @@ project.create.type.works=Choose this option for projects which have a schedule 
   <p>Examples include: Projects to enhance, restore, protect or manage environmental assets, etc.</p>
 project.details.access=Define access rules for your project data
 project.details.aim=What is the aim of this project?
+project.details.associations=Define project associations
 project.details.dataSharing=Data sharing
 project.details.dataSharingLicense=Data sharing license
 project.details.find=Help people find your project
-project.details.image=Project graphics
+project.details.image=Add graphics to personalise your project pages
 project.details.involved=How can people get involved?
 project.details.manager=Contact email address
 project.details.org=Organisation which owns this project
@@ -81,15 +72,12 @@ project.details.orgSponsor=Sponsoring organisation
 project.details.orgSvcProvider=Service provider organisation
 project.details.projectPrivacy=Project privacy
 project.details.scienceType=Type of science being undertaken
-project.details.site=Define the site for your project
+project.details.site=Define the spatial extent of the project area
 project.details.tell=Tell people about your project
 
-project.search.active=Show only active projects
-project.search.children=Show only projects suitable for children
-project.search.difficulty=Show only projects with difficulty level
-project.search.diy=Show only do-it-yourself projects
-project.search.noCost=Show only free projects
-project.search.teach=Show only projects with teaching materials
+project.search.active=Active
+project.search.difficulty=Difficulty level
+project.search.mobile=Mobile Apps
 
 project.tag.difficultyEasy=Difficulty: Easy
 project.tag.difficultyMedium=Difficulty: Medium
@@ -99,6 +87,10 @@ project.tag.children=Child/Family Friendly
 project.tag.noCost=No Cost
 project.tag.teach=Teaching Materials
 
+project.actualEndDate=Actual End Date
+project.actualEndDate.help=Date the project actually finished.
+project.actualStartDate=Actual Start Date
+project.actualStartDate.help=Date the project actually commenced.
 project.difficulty=What is the difficulty level of field work?
 project.difficulty.help=
 project.gear=What kind of equipment is needed for field work?
@@ -109,8 +101,18 @@ project.hasTeachingMaterials=Do you provide any teaching materials to participan
 project.hasTeachingMaterials.help=
 project.isDIY=Is this a do-it-yourself project?
 project.isDIY.help=
+project.isMetadataSharing=Share metadata
+project.isMetadataSharing.help=
+project.isMetadataSharing.extra=This makes the project discoverable on other citizen science sites such as <a href='http://www.acsa.edu.au'>ACSA</a> and <a href='http://http://scistarter.com/'>SciStarter</a>
 project.isSuitableForChildren=Is this project suitable for children under 18?
 project.isSuitableForChildren.help=
+project.logo.extra=The logo image should be 200w x 150h for best results.
+project.logo.visible=The logo will appear on the project list page like this.  Remove and reload to change this.
+project.plannedEndDate=End Date
+project.plannedEndDate.help=Date the project is intended to finish.
+project.plannedEndDate.extra=Leave blank if the project is ongoing.
+project.plannedStartDate=Start Date
+project.plannedStartDate.help=Date the project is intended to commence.
 project.task=Please describe the tasks involved in field work
 project.task.help=
 project.type=What kind of project is this?
