--- a/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
+++ b/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
@@ -11,6 +11,7 @@ g.home=Home
 g.keywords=Keywords
 g.loading=Loading...
 g.less=(less)
+g.mobileApps.help=Provide the URL links for any relevant mobile apps associated with the {0}.
 g.more=(more)
 g.next=Next
 g.new=New
@@ -39,6 +40,7 @@ g.search=Search
 g.selectAll=Select all
 g.settings=Settings
 g.showing=Showing
+g.socialMedia.help=Provide the URL links for any relevant social media sites associated with the {0}.
 g.sortBy=Sort by
 g.sortOrder=Sort order
 g.status=Status
@@ -53,9 +55,11 @@ project.create.settings.program=Use the activity types associated with the progr
 project.create.settings.project= Make a custom selection of activity types for this project
 project.create.type.heading=Select the applicable type of project
 project.create.type.note=All project types use the same suite of available data recording forms, but the way that they are used is different in each.
-project.create.type.survey=Choose this option for survey-based projects where activity forms can be selected and used repeatedly (ie. not in association with a schedule of actions).\
+project.create.type.survey=Choose this option for survey-based projects where activity forms can be \
+   selected and used repeatedly (ie. not in association with a schedule of actions).\
   <p>Examples include: Single or multi-species water watch surveys, ecological surveys, etc.</p>
-project.create.type.works=Choose this option for projects which have a schedule of actions (activities). Each record in the database requires a new activity to be added to the schedule before data can be recorded against it.\
+project.create.type.works=Choose this option for projects which have a schedule of actions (activities).  \
+   Each record in the database requires a new activity to be added to the schedule before data can be recorded against it.\
   <p>Examples include: Projects to enhance, restore, protect or manage environmental assets, etc.</p>
 project.details.access=Define access rules for your project data
 project.details.aim=What is the aim of this project?
@@ -91,34 +95,53 @@ project.actualEndDate=Actual End Date
 project.actualEndDate.help=Date the project actually finished.
 project.actualStartDate=Actual Start Date
 project.actualStartDate.help=Date the project actually commenced.
+project.aim.help=Describe the aim of the project and what you are wanting to achieve with it.  \
+   Use this field to highlight the importance of the project and why you want people to be involved.  \
+   Words in this field are also used for searching.
+project.description.help=Provide a description of your project.  \
+   This is the main thing that people use to decide whether or not to participate in projects.  \
+   Words in the description are also used for searching.
 project.difficulty=What is the difficulty level of field work?
-project.difficulty.help=
+project.difficulty.help=Select the difficulty level of the project.
 project.gear=What kind of equipment is needed for field work?
-project.gear.help=
+project.gear.help=List any equipment that participants might need to participate in the project.
 project.hasParticipantCost=Is there any cost to participants?
-project.hasParticipantCost.help=
+project.hasParticipantCost.help=Indicate whether the project involves a cost to participants.
 project.hasTeachingMaterials=Do you provide any teaching materials to participants?
-project.hasTeachingMaterials.help=
+project.hasTeachingMaterials.help=Indicate whether teaching or support materials are provided to assist project participants.
+project.involved.help=Clearly describe how people can get involved in the project.
 project.isDIY=Is this a do-it-yourself project?
-project.isDIY.help=
+project.isDIY.help=Indicate whether people can participate in the project in the project on their own time and with their own resources.
 project.isMetadataSharing=Share metadata
-project.isMetadataSharing.help=
-project.isMetadataSharing.extra=This makes the project discoverable on other citizen science sites such as <a href='http://www.acsa.edu.au'>ACSA</a> and <a href='http://http://scistarter.com/'>SciStarter</a>
+project.isMetadataSharing.help=Tick to allow information on this page to be shared with other citizen science \
+   project discovery sites, including the Australian Citizen Science Association.
+project.isMetadataSharing.extra=This makes the project discoverable on other citizen science sites such as \
+   <a href='http://www.acsa.edu.au'>ACSA</a> and <a href='http://http://scistarter.com/'>SciStarter</a>
 project.isSuitableForChildren=Is this project suitable for children under 18?
-project.isSuitableForChildren.help=
+project.isSuitableForChildren.help=Indicate whether the project is suitable for children to participate in.
+project.keywords.help=Include any additional key words which might assist in searching for this project \
+   such as location and geographic area names, names of target species, etc.
 project.logo.extra=The logo image should be 200w x 150h for best results.
+project.logo.help=The logo is used as the image associated with the project in the project finder page and also as an icon on the project 'About' page.
 project.logo.visible=The logo will appear on the project list page like this.  Remove and reload to change this.
+project.mainImage.help=The graphic image is used as the main feature image on the project 'About' page.
+project.manager.help=Enter a contact email address for the project.
+project.name.help=Short name for the project. Words in this field are used for searching.
+project.organisationName.help=Select the name of the organisation that is responsible for the project.
+project.organisationNameSearch=What is the name of the organisation running this project?
 project.plannedEndDate=End Date
-project.plannedEndDate.help=Date the project is intended to finish.
+project.plannedEndDate.help=The date that the project is intended to end.
 project.plannedEndDate.extra=Leave blank if the project is ongoing.
 project.plannedStartDate=Start Date
-project.plannedStartDate.help=Date the project is intended to commence.
+project.plannedStartDate.help=The date that the project is intended to commence.
+project.scienceType.help=Select the type of science this project is contributing to.
 project.task=Please describe the tasks involved in field work
-project.task.help=
+project.task.help=Describe the project tasks that people can participate in.
 project.type=What kind of project is this?
-project.type.help=
+project.type.help=Select the type of project. This is important and effects the metadata which is required and also other factors.
 project.useALA=Do you want to record your project data on this site?
-project.useALA.help=
-project.organisationNameSearch=What is the name of the organisation running this project?
-project.organisationNameSearch.help=
+project.useALA.help=Select 'YES' if you want to use ALA infrastructure to record and store your survey data.  \
+   Select 'NO' if you intend to record your survey data in your own external database.
+project.website.help=Provide a web site address for the project.  \
+   This is particularly important for projects which are not using the ALA infrastructure to record survey data.
 
