--- a/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
+++ b/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
@@ -116,14 +116,14 @@ project.isMetadataSharing=Share metadata
 project.isMetadataSharing.help=Tick to allow information on this page to be shared with other citizen science \
    project discovery sites, including the Australian Citizen Science Association.
 project.isMetadataSharing.extra=This makes the project discoverable on other citizen science sites such as \
-   <a href='http://www.acsa.edu.au'>ACSA</a> and <a href='http://http://scistarter.com/'>SciStarter</a>
+   <a href='http://csna.gaiaresources.com.au/wordpress/'>ACSA</a> and <a href='http://http://scistarter.com/'>SciStarter</a>
 project.isSuitableForChildren=Is this project suitable for children under 18?
 project.isSuitableForChildren.help=Indicate whether the project is suitable for children to participate in.
 project.keywords.help=Include any additional key words which might assist in searching for this project \
    such as location and geographic area names, names of target species, etc.
 project.logo.extra=The logo image should be 200w x 150h for best results.
 project.logo.help=The logo is used as the image associated with the project in the project finder page and also as an icon on the project 'About' page.
-project.logo.visible=The logo will appear on the project list page like this.  Remove and reload to change this.
+project.logo.visible=The logo will appear on the project list page like this.<br\>Remove and reload to change this.
 project.mainImage.help=The graphic image is used as the main feature image on the project 'About' page.
 project.manager.help=Enter a contact email address for the project.
 project.name.help=Short name for the project. Words in this field are used for searching.
