--- a/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
+++ b/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
@@ -116,7 +116,7 @@ project.isMetadataSharing=Share metadata
 project.isMetadataSharing.help=Tick to allow information on this page to be shared with other citizen science \
    project discovery sites, including the Australian Citizen Science Association.
 project.isMetadataSharing.extra=This makes the project discoverable on other citizen science sites such as \
-   <a href='http://csna.gaiaresources.com.au/wordpress/'>ACSA</a> and <a href='http://http://scistarter.com/'>SciStarter</a>
+   <a href='http://www.citizenscience.org.au'>ACSA</a> and <a href='http://http://scistarter.com/'>SciStarter</a>
 project.isSuitableForChildren=Is this project suitable for children under 18?
 project.isSuitableForChildren.help=Indicate whether the project is suitable for children to participate in.
 project.keywords.help=Include any additional key words which might assist in searching for this project \
