--- a/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
+++ b/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
@@ -81,7 +81,9 @@ project.details.tell=Tell people about your project
 
 project.search.active=Active
 project.search.difficulty=Difficulty level
+project.search.hideshow=Filter, Sort & Search &#x25BE;
 project.search.mobile=Mobile Apps
+project.search.projecttype=Project types
 
 project.tag.difficultyEasy=Difficulty: Easy
 project.tag.difficultyMedium=Difficulty: Medium
