--- a/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
+++ b/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
@@ -13,6 +13,7 @@ g.loading=Loading...
 g.less=(less)
 g.mobileApps.help=Provide the URL links for any relevant mobile apps associated with the {0}.
 g.more=(more)
+g.multiselect.help=Hold CTRL to select multiple
 g.next=Next
 g.new=New
 g.note=Note
