Improvements to the create new organisation page.

--- a/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
+++ b/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
@@ -148,3 +148,12 @@ project.useALA.help=Select 'YES' if you want to use ALA infrastructure to record
 project.website.help=Provide a web site address for the project.  \
    This is particularly important for projects which are not using the ALA infrastructure to record survey data.
 
+organisation.details.header=Information about your organisation
+organisation.images.header=Add graphics to personalise your organisation pages
+organisation.logo.extra=The logo image should be 200w x 150h for best results.
+organisation.logo.help=The logo is used as the image associated with the project in the project finder page and also as an icon on the project 'About' page.
+organisation.logo.visible=The logo will appear on the project list page like this.<br\>Remove and reload to change this.
+organisation.mainImage.help=The graphic image is used as the main feature image on the project 'About' page.
+organisation.name.help=The name of your organisation.
+organisation.description.help=A description of your organisation.  Markdown is supported for formatting.
+organisation.webUrl.help=The URL of your organisations web site
