sync project details l labels; org index page

--- a/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
+++ b/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
@@ -21,20 +21,8 @@ g.org=Organisation
 g.org.name=Organisation Name.
 g.perPage=per page
 g.prev=Prev
-g.program.name=Program name
 g.project=Project
 g.projects=Projects
-g.project.activities=Project Activities
-g.project.aim=Project Aim
-g.project.description=Project Description
-g.project.details=Project Details
-g.project.externalId=External Id
-g.project.funding=Project funding
-g.project.grantId=Grant Id
-g.project.name=Project Name
-g.project.type=Project Type
-g.project.type.survey=Biological survey project
-g.project.type.works=Works and site based project
 g.reset=Reset
 g.save=Save changes
 g.search=Search
@@ -45,40 +33,87 @@ g.socialMedia.help=Provide the URL links for any relevant social media sites ass
 g.sortBy=Sort by
 g.sortOrder=Sort order
 g.status=Status
-g.subprogram.name=Sub-program name
 g.website=Web site
 project.citizenScience.heading=Citizen Science Project Finder
 project.citizenScience.portalLink=Create new project
 project.create.crumb=Create new project
-project.create.isCitizenScience=This is a citizen science project.
-project.create.settings.heading=This section allows you to restrict the types of activities that can be created as a part of this project.
-project.create.settings.program=Use the activity types associated with the programme (funding source)
-project.create.settings.project= Make a custom selection of activity types for this project
-project.create.type.heading=Select the applicable type of project
-project.create.type.note=All project types use the same suite of available data recording forms, but the way that they are used is different in each.
-project.create.type.survey=Choose this option for survey-based projects where activity forms can be \
-   selected and used repeatedly (ie. not in association with a schedule of actions).\
-  <p>Examples include: Single or multi-species water watch surveys, ecological surveys, etc.</p>
-project.create.type.works=Choose this option for projects which have a schedule of actions (activities).  \
-   Each record in the database requires a new activity to be added to the schedule before data can be recorded against it.\
-  <p>Examples include: Projects to enhance, restore, protect or manage environmental assets, etc.</p>
 project.details.access=Define access rules for your project data
-project.details.aim=What is the aim of this project?
+project.details.aim=Project Aim:
+project.details.aim.help=Describe the aim of the project and what you are wanting to achieve with it.  \
+   Use this field to highlight the importance of the project and why you want people to be involved.  \
+   Words in this field are also used for searching.
 project.details.associations=Define project associations
 project.details.dataSharing=Data sharing
 project.details.dataSharingLicense=Data sharing license
+project.details.description=Project Description:
+project.details.description.help=Provide a description of your project.  \
+   This is the main thing that people use to decide whether or not to participate in projects.  \
+   Words in the description are also used for searching.
+project.details.difficulty=What is the difficulty level of field work?
+project.details.difficulty.help=Select the difficulty level of the project.
+project.details.externalId=External Id:
 project.details.find=Help people find your project
+project.details.funding=Project funding:
+project.details.gear=What kind of equipment is needed for field work?
+project.details.gear.help=List any equipment that participants might need to participate in the project.
+project.details.grantId=Grant Id:
+project.details.hasParticipantCost=Is there any cost to participants?
+project.details.hasParticipantCost.help=Indicate whether the project involves a cost to participants.
+project.details.hasTeachingMaterials=Do you provide any teaching materials to participants?
+project.details.hasTeachingMaterials.help=Indicate whether teaching or support materials are provided to assist project participants.
 project.details.image=Add graphics to personalise your project pages
 project.details.involved=How can people get involved?
-project.details.manager=Contact email address
+project.details.involved.help=Clearly describe how people can get involved in the project.
+project.details.isDIY=Is this a do-it-yourself project?
+project.details.isDIY.help=Indicate whether people can participate in the project in the project on their own time and with their own resources.
+project.details.isMetadataSharing=Share metadata?
+project.details.isMetadataSharing.extra=This makes the project discoverable on other citizen science sites such as \
+   <a href='http://www.citizenscience.org.au'>ACSA</a> and <a href='http://http://scistarter.com/'>SciStarter</a>
+project.details.isMetadataSharing.help=Tick to allow information on this page to be shared with other citizen science \
+   project discovery sites, including the Australian Citizen Science Association.
+project.details.isSuitableForChildren=Is this project suitable for children under 18?
+project.details.isSuitableForChildren.help=Indicate whether the project is suitable for children to participate in.
+project.details.keywords=Keywords:
+project.details.keywords.help=Include any additional key words which might assist in searching for this project \
+   such as location and geographic area names, names of target species, etc.
+project.details.logo=Project Logo:
+project.details.logo.extra=The logo image should be 200w x 150h for best results.
+project.details.logo.help=The logo is used as the image associated with the project in the project finder page and also as an icon on the project 'About' page.
+project.details.logo.visible=The logo will appear on the project list page like this.<br\>Remove and reload to change this.
+project.details.mainImage=Feature Graphic:
+project.details.mainImage.help=The graphic image is used as the main feature image on the project 'About' page.
+project.details.manager=Contact email address:
+project.details.manager.help=Enter a contact email address for the project.
+project.details.name=Project Name:
+project.details.name.help=Short name for the project. Words in this field are used for searching.
 project.details.org=Organisation which owns this project
-project.details.orgGrantee=Organisation which is the grantee
-project.details.orgSponsor=Sponsoring organisation
-project.details.orgSvcProvider=Service provider organisation
-project.details.projectPrivacy=Project privacy
-project.details.scienceType=Type of science being undertaken
+project.details.orgGrantee=Organisation which is the grantee:
+project.details.orgSponsor=Sponsoring organisation:
+project.details.orgSvcProvider=Service provider organisation:
+project.details.organisationName.help=Select the name of the organisation that is responsible for the project.
+project.details.organisationNameSearch=What is the name of the organisation running this project?
+project.details.plannedEndDate=End Date:
+project.details.plannedEndDate.help=The date that the project is intended to end.
+project.details.plannedEndDate.extra=Leave blank if the project is ongoing.
+project.details.plannedStartDate=Start Date:
+project.details.plannedStartDate.help=The date that the project is intended to commence.
+project.details.program=Program name:
+project.details.projectPrivacy=Project privacy:
+project.details.scienceType=Type of science being undertaken:
+project.details.scienceType.help=Select the type of science this project is contributing to.
 project.details.site=Define the spatial extent of the project area
+project.details.subprogram=Sub-program name:
+project.details.task=Please describe the tasks involved in field work:
+project.details.task.help=Describe the project tasks that people can participate in.
 project.details.tell=Tell people about your project
+project.details.type=What kind of project is this?
+project.details.type.help=Select the type of project. This is important and effects the metadata which is required and also other factors.
+project.details.useALA=Do you want to record your project data on this site?
+project.details.useALA.help=Select 'YES' if you want to use ALA infrastructure to record and store your survey data.  \
+   Select 'NO' if you intend to record your survey data in your own external database.
+project.details.website=Website:
+project.details.website.help=Provide a web site address for the project.  \
+   This is particularly important for projects which are not using the ALA infrastructure to record survey data.
 
 project.search.active=Active
 project.search.difficulty=Difficulty level
@@ -93,58 +128,4 @@ project.tag.diy=DIY
 project.tag.children=Child/Family Friendly
 project.tag.noCost=No Cost
 project.tag.teach=Teaching Materials
-
-project.actualEndDate=Actual End Date
-project.actualEndDate.help=Date the project actually finished.
-project.actualStartDate=Actual Start Date
-project.actualStartDate.help=Date the project actually commenced.
-project.aim.help=Describe the aim of the project and what you are wanting to achieve with it.  \
-   Use this field to highlight the importance of the project and why you want people to be involved.  \
-   Words in this field are also used for searching.
-project.description.help=Provide a description of your project.  \
-   This is the main thing that people use to decide whether or not to participate in projects.  \
-   Words in the description are also used for searching.
-project.difficulty=What is the difficulty level of field work?
-project.difficulty.help=Select the difficulty level of the project.
-project.gear=What kind of equipment is needed for field work?
-project.gear.help=List any equipment that participants might need to participate in the project.
-project.hasParticipantCost=Is there any cost to participants?
-project.hasParticipantCost.help=Indicate whether the project involves a cost to participants.
-project.hasTeachingMaterials=Do you provide any teaching materials to participants?
-project.hasTeachingMaterials.help=Indicate whether teaching or support materials are provided to assist project participants.
-project.involved.help=Clearly describe how people can get involved in the project.
-project.isDIY=Is this a do-it-yourself project?
-project.isDIY.help=Indicate whether people can participate in the project in the project on their own time and with their own resources.
-project.isMetadataSharing=Share metadata
-project.isMetadataSharing.help=Tick to allow information on this page to be shared with other citizen science \
-   project discovery sites, including the Australian Citizen Science Association.
-project.isMetadataSharing.extra=This makes the project discoverable on other citizen science sites such as \
-   <a href='http://www.citizenscience.org.au'>ACSA</a> and <a href='http://http://scistarter.com/'>SciStarter</a>
-project.isSuitableForChildren=Is this project suitable for children under 18?
-project.isSuitableForChildren.help=Indicate whether the project is suitable for children to participate in.
-project.keywords.help=Include any additional key words which might assist in searching for this project \
-   such as location and geographic area names, names of target species, etc.
-project.logo.extra=The logo image should be 200w x 150h for best results.
-project.logo.help=The logo is used as the image associated with the project in the project finder page and also as an icon on the project 'About' page.
-project.logo.visible=The logo will appear on the project list page like this.<br\>Remove and reload to change this.
-project.mainImage.help=The graphic image is used as the main feature image on the project 'About' page.
-project.manager.help=Enter a contact email address for the project.
-project.name.help=Short name for the project. Words in this field are used for searching.
-project.organisationName.help=Select the name of the organisation that is responsible for the project.
-project.organisationNameSearch=What is the name of the organisation running this project?
-project.plannedEndDate=End Date
-project.plannedEndDate.help=The date that the project is intended to end.
-project.plannedEndDate.extra=Leave blank if the project is ongoing.
-project.plannedStartDate=Start Date
-project.plannedStartDate.help=The date that the project is intended to commence.
-project.scienceType.help=Select the type of science this project is contributing to.
-project.task=Please describe the tasks involved in field work
-project.task.help=Describe the project tasks that people can participate in.
-project.type=What kind of project is this?
-project.type.help=Select the type of project. This is important and effects the metadata which is required and also other factors.
-project.useALA=Do you want to record your project data on this site?
-project.useALA.help=Select 'YES' if you want to use ALA infrastructure to record and store your survey data.  \
-   Select 'NO' if you intend to record your survey data in your own external database.
-project.website.help=Provide a web site address for the project.  \
-   This is particularly important for projects which are not using the ALA infrastructure to record survey data.
 
