move project strings from gsp to messages.properties

--- a/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
+++ b/fieldcapture-hubs-plugin/grails-app/i18n/messages.properties
@@ -11,11 +11,13 @@ g.home=Home
 g.keywords=Keywords
 g.loading=Loading...
 g.less=(less)
+g.mobileApps=Mobile Apps
 g.mobileApps.help=Provide the URL links for any relevant mobile apps associated with the {0}.
 g.more=(more)
 g.multiselect.help=Hold CTRL to select multiple
 g.next=Next
 g.new=New
+g.noImage=No image provided
 g.note=Note
 g.org=Organisation
 g.org.name=Organisation Name.
@@ -24,15 +26,21 @@ g.prev=Prev
 g.project=Project
 g.projects=Projects
 g.reset=Reset
+g.resetSearch=Reset
+g.resetSearch.tooltip=Remove all filters and sorting options
 g.save=Save changes
 g.search=Search
+g.search.hideShow=Filter, Sort & Search &#x25BE;
+g.search.placeHolder=Enter a search term
 g.selectAll=Select all
 g.settings=Settings
 g.showing=Showing
+g.socialMedia=Social Media
 g.socialMedia.help=Provide the URL links for any relevant social media sites associated with the {0}.
 g.sortBy=Sort by
 g.sortOrder=Sort order
 g.status=Status
+g.visitUsAt=Visit us at
 g.website=Web site
 project.citizenScience.heading=Citizen Science Project Finder
 project.citizenScience.portalLink=Create new project
@@ -115,11 +123,25 @@ project.details.website=Website:
 project.details.website.help=Provide a web site address for the project.  \
    This is particularly important for projects which are not using the ALA infrastructure to record survey data.
 
+project.display.about=About the project
+project.display.aim=Aim
+project.display.concluded=Project concluded.
+project.display.contact=Contact Email
+project.display.description=Description
+project.display.gear=Equipment
+project.display.involved=Get Involved!
+project.display.join=Get Started
+project.display.site=Project Area
+project.display.status=Project status
+project.display.task=Tasks
+project.display.view=View the project page
+
+project.download.tooltip=Download metadata for projects in JSON format"
+
 project.search.active=Active
 project.search.difficulty=Difficulty level
-project.search.hideshow=Filter, Sort & Search &#x25BE;
-project.search.mobile=Mobile Apps
 project.search.projecttype=Project types
+project.search.term.tooltip=Only show projects which contain the search term
 
 project.tag.difficultyEasy=Difficulty: Easy
 project.tag.difficultyMedium=Difficulty: Medium
